# MoonOS

./: .gitignore  README.md  build.sh  run-qemu.sh
.github/workflows/: ci.yml
docs/: 00-overview.md  01-architecture.md  02-roadmap.md  03-directory-structure.md  04-boot-sequence.md  05-kernel-design.md  06-gui-design.md  07-filesystem-design.md  08-memory-management.md  09-process-management.md  10-network-design.md  SEASON_1.md  UNITY_PROJECT_STRUCTURE.md
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  main.rs  panic.rs  serial.rs
tools/image-builder/: Cargo.toml
tools/image-builder/src/: main.rs
