[package]
name = "moon-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
noto-sans-mono-bitmap = { version = "0.3", default-features = false, features = ["regular", "size_16", "unicode-basic-latin"] }
uart_16550 = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
